# AI-agent-for-deployment

./: README.md  deployer.py  model-price-note-oAI-4o.md  model-price-note-oAI.md  seo_blog_Xen_vs_vmware.txt
detect_environment/: README.md  log.txt  pyproject.toml  report.md  res.txt
detect_environment/src/detect_environment/: crew.py  main.py
detect_environment/src/detect_environment/config/: agents.yaml
detect_environment/src/detect_environment/tools/: custom_tool.py
manager/: .gitignore  bash.sh  cpu-inference-guide.md  deployment_recommendation_report.md  gen_agent_mapping.py  gen_deployment_guide.py  gen_llm_app_description.py  gen_struct.py  generate_ray_code.py  gpu-resource-guide.md  routing.md
prompt/: routing.md
test-cases/: README.md
test-cases/job-posting/: .gitignore  Makefile  log.txt  pyproject.toml
test-cases/job-posting/results/: experiment_stats.json  summary.py
test-cases/workflow/: baseline_ray.py  gen.py  humanize_prompt.txt  long_file_translate.py  long_file_translate_desc.py  long_file_translate_ray.py  tavily_search.py  write_seo_blog_humanize.py  write_seo_blog_humanize_ray.py
test-cases/workflow/results/: iteration_1_comparison_20241203_170321.json  iteration_1_comparison_20241203_173158.json  iteration_1_comparison_20241203_181642.json  iteration_2_comparison_20241203_170909.json  iteration_2_comparison_20241203_173636.json  iteration_2_comparison_20241203_181652.json  iteration_3_comparison_20241203_171422.json  iteration_3_comparison_20241203_174428.json  iteration_3_comparison_20241203_181702.json  test.py  (+9 more)
(+44 files in other folders)
